//
//  AccessibilityIdentifier.swift
//  MyMovies
//
//  Created by Andrei Shpartou on 15/04/2025.
//

import Foundation

enum AccessibilityIdentifier {
    static let tabBar = "tabBar"
    static let profileItem = "profileItem"
    static let profileSettingsSignInButton = "profileSettingsSignInButton"
    // Login
    static let loginEmailTextField = "loginEmailTextField"
    static let loginPasswordTextField = "loginPasswordTextField"
    static let loginScreenSignInButton = "loginScreenSignInButton"
    static let loginScreenSignUpButton = "loginScreenSignUpButton"
    // SignUp
    static let signupFullNameTextField = "signupFullNameTextField"
    static let signupEmailTextField = "signupEmailTextField"
    static let signupPasswordTextField = "signupPasswordTextField"
    static let signupScreenSignupButton = "signupScreenSignupButton"
}
